Add webpack plugins and dev-server

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    </head>
    <body>
     <!--script src="./src/index.js"></script-->
-    <script src="./dist/bundle.js"></script>
+    <script src="./dist/app.bundle.js"></script>
+    <script src="./dist/print.bundle.js"></script>
    </body>
   </html>
